# OS-tasks

./: CV_Zherelo.docx  Creator.cpp  Kolok_Os1.cpp  Main.cpp  Reporter.cpp
CMake_Lab4/: CMakeLists.txt
CMake_Lab4/src/: Receiver.cpp  Sender.cpp  header.h
CMake_Lab4/tests/: tests.cpp
Kolok2/: Kolok2.cpp  task.http
Lab2_OS/: Lab2_OS.cpp
Lab2_OS/ArrayThreads.Tests/: ArrayThreads.Tests.cpp
Lab2_Os/: Lab2_OS.cpp
Lab3_Os/: CMakeLists.txt  Cmake_Lab3_os.cpp  Cmake_Lab3_os.h  OS_lab3.cpp
Lab4_OS/: Receiver.cpp  Sender.cpp
Lab5_Os/: Client.cpp  Server.cpp  test.cpp
